syntax = "proto3";
option go_package = "github.com/xaraphix/Sif/internal/raft/raftadapter/protos;protos";

import "google/protobuf/struct.proto";

service Raft {
  rpc RequestVoteFromPeer(VoteRequest) returns (VoteResponse);
  rpc ReplicateLog(LogRequest) returns (LogResponse);
  rpc BroadcastMessage(.google.protobuf.Struct) returns (BroadcastMessageResponse);

  rpc GetRaftInfo(RaftInfoRequest) returns (RaftInfoResponse);
}

message VoteRequest {
  string NodeId = 1;
  int32 CurrentTerm = 2;
  int32 LogLength = 3;
  int32 LastTerm = 4;
}

message VoteResponse {
  string PeerId = 1;
  int32 Term = 2;
  bool VoteGranted = 3;
}

message LogRequest {
  string LeaderId = 1;
  int32 CurrentTerm = 2;
  int32 SentLength = 3;
  int32 PrevLogTerm = 4;
  int32 CommitLength = 5;
  repeated Log Entries = 6;

}

message Log {
  int32 Term = 1;
  .google.protobuf.Struct Message = 2;
}

message LogResponse {
  string FollowerId = 1;
  int32 Term = 2;
  int32 AckLength = 3;
  bool Success = 4;
}


message BroadcastMessageResponse {
  bool success = 1;
}

message RaftPersistentState {
  repeated Log RaftLogs = 1;
  int32 RaftCurrentTerm = 2;
  string RaftVotedFor = 3;
  int32 RaftCommitLength = 4;
}

message RaftInfoRequest {
}

message RaftInfoResponse {
  string NodeId = 1;
  string CurrentLeader = 2;
  int32 CurrentTerm = 3;
}
